disable old session login logouts
